# editor-mirror

./: .gitignore  CMakeLists.txt  README.md  tree  vcpkg.json
conf/: global.toml
src/: app.cpp  app.h  button.cpp  button.h  editor.cpp  editor.h  frame.cpp  frame.h  layout.cpp  layout.h  main.cpp
src/components/: editor.cpp  editor.h
src/windowS/: major.cpp  major.h
